# worldevals

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: canary.yml  ci.yml  docs.yml  reconcile.yml  release.yml
docs/: CNAME  api.md  contributing.md  model-card-template.md  model-cards.md
plans/: 0001-worldevals-design.md
scripts/: gen_catalog.py  gen_task_keys.py  reconcile.py
src/worldevals/: __init__.py  _extract.py  _reconcile.py  catalog.py  cli.py
src/worldevals/register/: README.md
src/worldevals/register/kitchenbench/: benchmark.yaml  task_keys.yaml
tests/: test_catalog_cli.py  test_lockfile.py
