[build-system]
requires = ["hatchling>=1.18", "hatch-vcs>=0.3"]
build-backend = "hatchling.build"

[project]
name = "worldevals"
dynamic = ["version"]
description = "A curated catalog of physical-AI benchmarks built on Inspect Robots — the Inspect Evals for robotics."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "RoboCurve" }]
keywords = ["robotics", "benchmarks", "vla", "evaluation", "catalog", "physical-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["inspect-robots>=0.3"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.5",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    # <0.6.1: 0.6.1 pulls in "properdocs", an mkdocs fork that injects promo
    # content into every build. Cap (not !=) so a future 0.6.2 can't re-add it.
    "mkdocs-gen-files>=0.5,<0.6.1",
    "mkdocstrings[python]>=0.26",
    "mkdocs-llmstxt>=0.2",
]

[project.scripts]
worldevals = "worldevals.cli:main"

[project.urls]
Homepage = "https://github.com/robocurve/worldevals"
Documentation = "https://worldevals.org/"
Framework = "https://github.com/robocurve/inspect-robots"

[tool.hatch.build.targets.wheel]
packages = ["src/worldevals"]


# ---------------------------------------------------------------------------
# Versioning: single-source the version from git tags via hatch-vcs (the
# release workflow cuts a vX.Y.Z tag; nothing is committed to main).
# ---------------------------------------------------------------------------
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Before/without tags (e.g. shallow CI checkouts), fall back instead of failing.
version_scheme = "guess-next-dev"
fallback_version = "0.0.0"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["worldevals"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/worldevals", "scripts"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["worldevals"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pragma: no cover",
]
